Turn to Dark Theme

--- a/client/src/components/Layout/Header/Header.module.scss
+++ b/client/src/components/Layout/Header/Header.module.scss
@@ -5,7 +5,7 @@
     @extend .full;
     @include m.background(
       (
-        linear-gradient(35deg, #00000022, #000000),
+        linear-gradient(to bottom, #00000060 10%, #111),
         url('@/assets/img/header-lg.png')
       )
     );
