--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,4 +12,11 @@ html {
 
 body {
   background-color: #111;
+  font-size: 1.6rem;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+section {
+  margin: 6em 0;
 }
