--- a/client/src/scss/vars.scss
+++ b/client/src/scss/vars.scss
@@ -1,4 +1,12 @@
 $main-heading-font: 5rem;
 $main-subheading-font: 2.6rem;
 
+$basic-font: 1.6rem;
+$secondary-heading-font: 3.6rem;
+
+$gap-small: 3em;
+$gap-large: 6em;
+
+$section-margin: 6em auto;
+
 $main-color-light: #fff;
