--- a/client/src/components/Sections/About/About.module.scss
+++ b/client/src/components/Sections/About/About.module.scss
@@ -2,14 +2,12 @@
   display: flex;
   align-items: center;
   gap: 5em;
-}
 
-.about__half {
-  flex: 1;
-  width: 50%;
-  &:nth-child(2) {
+  &__half {
+    flex: 1;
     opacity: 0;
     translate: 50% 0;
+
     &.shown {
       animation: fadeUp 1s ease-out forwards;
       animation-delay: 1s;
@@ -20,19 +18,15 @@
 .photo {
   position: relative;
   max-width: 100%;
-  display: flex;
-  justify-content: center;
 
   img {
     width: 100%;
-    object-position: center;
     object-fit: cover;
+    object-position: center;
   }
 
   &::after {
     content: '';
-    box-shadow: 0 0 1px 8px #1114 inset;
-    background-image: radial-gradient(#1114 10%, #111 78%);
     position: absolute;
     display: block;
     left: 0;
@@ -42,20 +36,27 @@
     height: 100%;
     width: 100%;
     z-index: 20;
+    box-shadow: 0 0 1px 8px #1114 inset;
+    background-image: radial-gradient(#1114 10%, #111 78%);
   }
 }
 
-@keyframes fadeUp {
-  from {
-    opacity: 0;
-    translate: 0 50%;
-  }
-  50% {
-    opacity: 0.61;
-    translate: 0 0;
-  }
-  to {
-    opacity: 1;
-    translate: 0 0;
+@media screen and (max-width: 768px) {
+  .about {
+    position: relative;
+
+    &__half:nth-child(1) {
+      flex: 1;
+      aspect-ratio: 1/0.7;
+      padding: $gap-small;
+      background: radial-gradient(#1114 10%, #111 78%),
+        url('@/assets/img/author.jpg');
+      background-position: center;
+      background-size: cover;
+    }
+
+    &__half:nth-child(2) {
+      display: none;
+    }
   }
 }
