Change shared file to utils file

--- a/client/src/scss/vars.scss
+++ b/client/src/scss/vars.scss
@@ -4,7 +4,8 @@ $main-subheading-font: 2.6rem;
 $basic-font: 1.6rem;
 $secondary-heading-font: 3.6rem;
 
-$gap-small: 3em;
+$gap-small: 1.5em;
+$gap-medium: 3em;
 $gap-large: 6em;
 
 $section-margin: 6em auto;
