Apply new variables

--- a/client/src/components/Layout/Header/Header.module.scss
+++ b/client/src/components/Layout/Header/Header.module.scss
@@ -5,7 +5,7 @@
     @extend .u-full;
     @include m.background(
       (
-        linear-gradient(to bottom, #00000060 10%, #111),
+        linear-gradient(to bottom, #00000060 10%, $main-color-dark),
         url('@/assets/img/header-lg.png')
       )
     );
