--- a/client/src/components/Sections/About/About.module.scss
+++ b/client/src/components/Sections/About/About.module.scss
@@ -36,8 +36,8 @@
     height: 100%;
     width: 100%;
     z-index: 20;
-    box-shadow: 0 0 1px 8px #1114 inset;
-    background-image: radial-gradient(#1114 10%, #111 78%);
+    box-shadow: 0 0 1px 8px rgba($main-color-dark, 0.267) inset;
+    background-image: radial-gradient(rgba($main-color-dark, 0.267) 10%, $main-color-dark 78%);
   }
 }
 
@@ -49,7 +49,7 @@
       flex: 1;
       aspect-ratio: 1/0.7;
       padding: $gap-medium;
-      background: radial-gradient(#1114 10%, #111 78%),
+      background: radial-gradient(rgba($main-color-dark, 0.267) 10%, $main-color-dark 78%),
         url('@/assets/img/author.jpg');
       background-position: center;
       background-size: cover;
