--- a/client/src/scss/keyframes.scss
+++ b/client/src/scss/keyframes.scss
@@ -12,3 +12,25 @@
     translate: 0 0;
   }
 }
+
+@keyframes right-to-left {
+  from {
+    opacity: 0;
+    translate: 100% 0;
+  }
+  to {
+    opacity: 1;
+    translate: 0 0;
+  }
+}
+
+@keyframes left-to-right {
+  from {
+    opacity: 0;
+    translate: 0 -100%;
+  }
+  to {
+    opacity: 1;
+    translate: 0 0;
+  }
+}
