--- a/client/src/components/Sections/About/About.module.scss
+++ b/client/src/components/Sections/About/About.module.scss
@@ -2,16 +2,14 @@
   display: flex;
   align-items: center;
   gap: 5em;
+  opacity: 0;
+  translate: 50% 0;
+  &.shown {
+    animation: fadeUp 0.7s ease-out forwards;
+  }
 
   &__half {
     flex: 1;
-    opacity: 0;
-    translate: 50% 0;
-
-    &.shown {
-      animation: fadeUp 1s ease-out forwards;
-      animation-delay: 1s;
-    }
   }
 }
 
@@ -37,7 +35,10 @@
     width: 100%;
     z-index: 20;
     box-shadow: 0 0 1px 8px rgba($main-color-dark, 0.267) inset;
-    background-image: radial-gradient(rgba($main-color-dark, 0.267) 10%, $main-color-dark 78%);
+    background-image: radial-gradient(
+      rgba($main-color-dark, 0.267) 10%,
+      $main-color-dark 78%
+    );
   }
 }
 
@@ -49,7 +50,10 @@
       flex: 1;
       aspect-ratio: 1/0.7;
       padding: $gap-medium;
-      background: radial-gradient(rgba($main-color-dark, 0.267) 10%, $main-color-dark 78%),
+      background: radial-gradient(
+          rgba($main-color-dark, 0.267) 10%,
+          $main-color-dark 78%
+        ),
         url('@/assets/img/author.jpg');
       background-position: center;
       background-size: cover;
