Fix Slider height

--- a/client/src/components/UI/Slider/Slider.module.scss
+++ b/client/src/components/UI/Slider/Slider.module.scss
@@ -1,6 +1,8 @@
 .slider {
+  position: relative;
   max-height: 500px !important;
   overflow-anchor: none;
+  scrollbar-width: none;
 }
 
 .before-view {
