--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -25,3 +25,21 @@ section {
 .container {
   width: 90%;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns:
+    [full-start] minmax(1rem, 1fr)
+    [content-start]
+    min(100% - 2rem, 60rem)
+    [content-end]
+    minmax(1rem, 1fr) [full-end];
+}
+
+.grid > .grid-content {
+  grid-column: content;
+}
+
+ul {
+  list-style: none;
+}
