And and edit font-size vars

--- a/client/src/scss/vars.scss
+++ b/client/src/scss/vars.scss
@@ -1,8 +1,9 @@
 $main-heading-font: 5rem;
 $main-subheading-font: 2.6rem;
 
-$basic-font: 1.6rem;
+$basic-font: 2rem;
 $secondary-heading-font: 3.6rem;
+$tertiary-heading-font: 2.6rem;
 $small-font: 1.2rem;
 
 $gap-small: 1.5em;
