--- a/client/src/scss/vars.scss
+++ b/client/src/scss/vars.scss
@@ -4,6 +4,7 @@ $main-subheading-font: 2.6rem;
 $basic-font: 2rem;
 $secondary-heading-font: 3.6rem;
 $tertiary-heading-font: 2.6rem;
+$medium-font: 2rem;
 $small-font: 1.2rem;
 
 $gap-small: 1.5em;
