--- a/client/src/scss/vars.scss
+++ b/client/src/scss/vars.scss
@@ -14,7 +14,7 @@ $gap-large: 6em;
 $section-margin: 6em auto;
 
 $main-color-light: #fff;
-$main-color-dark: #131313;
+$main-color-dark: #1a1a1a;
 
 $slope-end-polygon: polygon(50% 0%, 100% 100%, 80% 100%, 18% 100%, 0 0);
 $slope-start-polygon: polygon(25% 0%, 100% 0%, 70% 100%, 0% 100%);
