--- a/client/src/components/Sections/About/About.module.scss
+++ b/client/src/components/Sections/About/About.module.scss
@@ -23,7 +23,7 @@
               rgba($main-color-dark, 0.267) 10%,
               $main-color-dark 78%
             ),
-            url('@/assets/img/author.png')
+            url('@/assets/img/author.webp')
           )
         );
         background-position: center;
