--- a/client/src/components/Features/TechStackList/TechStackListItem.module.scss
+++ b/client/src/components/Features/TechStackList/TechStackListItem.module.scss
@@ -1,12 +1,24 @@
 .item {
-  margin: 1.5em 0;
+  margin: 2.5em 0;
   display: flex;
   align-items: center;
-  gap: 1em;
-  flex-wrap: wrap;
+  gap: 1.5em;
+  flex-wrap: nowrap;
+
+  @include m.media('md') {
+    align-items: start;
+    flex-direction: column;
+  }
+}
+
+.item__content h3 {
+  margin-bottom: 0.3em;
+}
+.item__content p {
+  line-height: 1.5em;
 }
 
 .logo {
   font-size: 5rem;
-  filter:brightness(0) invert(1)
+  filter: brightness(0) invert(1);
 }
