--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -5,6 +5,7 @@ $basic-font: 2rem;
 $secondary-heading-font: 3.6rem;
 $tertiary-heading-font: 2.6rem;
 $medium-font: 2rem;
+$medium-small-font: 1.6rem;
 $small-font: 1.2rem;
 
 $gap-small: 1.5em;
