--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,5 +1,7 @@
-$main-heading-font: 5rem;
-$main-subheading-font: 2.6rem;
+$main-heading-font: 8rem;
+$main-heading-font-sm: 5rem;
+$main-subheading-font: 4rem;
+$main-subheading-font-sm: 3rem;
 
 $basic-font: 2rem;
 $secondary-heading-font: 3.6rem;
@@ -19,3 +21,6 @@ $main-color-dark: #1a1a1a;
 
 $slope-end-polygon: polygon(50% 0%, 100% 100%, 80% 100%, 18% 100%, 0 0);
 $slope-start-polygon: polygon(25% 0%, 100% 0%, 70% 100%, 0% 100%);
+
+$heading-font-family: 'Fira Sans', serif;
+$basic-font-family: 'Fira Sans', serif;
