--- a/src/components/Typography/Heading/Heading.module.scss
+++ b/src/components/Typography/Heading/Heading.module.scss
@@ -1,5 +1,18 @@
+.h1,
+.h2,
+.h3 {
+  font-family: $heading-font-family;
+}
+
+.h1 {
+  font-weight: 700;
+}
+
 .h1 {
   font-size: $main-heading-font;
+  @include m.media(sm) {
+    font-size: $main-heading-font-sm;
+  }
 }
 
 .h2 {
@@ -8,5 +21,6 @@
 }
 
 .h3 {
+  font-weight: 500;
   font-size: $tertiary-heading-font;
 }
