--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap');
+
 *,
 *::after,
 *::before {
@@ -21,6 +23,7 @@ section {
 body {
   background-color: $main-color-dark;
   font-size: $basic-font;
+  font-family: $basic-font-family;
   width: 100%;
   overflow-x: hidden;
   color: $main-color-light;
