Move assets into public folder for better performance

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -6,7 +6,7 @@
     @include m.background(
       (
         linear-gradient(to bottom, #00000060 10%, $main-color-dark),
-        url('@/assets/img/header-lg.webp')
+        url('./img/header-lg.webp')
       )
     );
     position: absolute;
