--- a/src/components/Sections/About/About.module.scss
+++ b/src/components/Sections/About/About.module.scss
@@ -24,7 +24,7 @@
               rgba($main-color-dark, 0.267) 10%,
               $main-color-dark 78%
             ),
-            url('@/assets/img/author.webp')
+            url('./assets/img/author.webp')
           )
         );
         background-position: center;
